#1 added simple turn passing and game state